--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    border: solid 1px black;
 }
 * {
     box-sizing: border-box;
