--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 .nav {
     width: 100%;
     height: 500px;
+    padding: 2px;
 
 }
 .nav img {
@@ -16,4 +17,8 @@ body{
 }
 * {
     box-sizing: border-box;
+}
+.prev {
+    top: -500px;
+    margin-left: 50px;
 }
