--- a/style.css
+++ b/style.css
@@ -1,24 +1,59 @@
-body{
-    margin: 0px;
-    height: 100vh;
-    width: 100%;
+* {
+  margin: 0px;
+  box-sizing: border-box;
 }
-.nav {
-    width: 100%;
-    height: 500px;
-    padding: 2px;
+section {
+  background-image: url("king2.jpg");
+  height: 695px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.topnav {
+  text-align: justify;
+  /* padding: 12px 14px; */
+  padding-left: 800px;
+  padding-top: 7px;
+  padding-bottom: 7px;
 
 }
-.nav img {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    border: solid 1px black;
+.topnav a {
+  padding-left: 70px;
+  text-decoration: none;
+  font-size: 25px;
+  color: whitesmoke;
+  text-shadow: 2px 1px black;
 }
-* {
-    box-sizing: border-box;
+.Sintro {
+  margin-top: 400px;
+  margin-left: 50px;
+  color: whitesmoke;
+  text-shadow: 4px 4px black;
+  font-size: 45px;
 }
-.prev {
-    top: -500px;
-    margin-left: 50px;
+@media only screen and (max-width: 700px) {
+  * {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+  }
+  section {
+    height: 100vh;
+    width:100%;
+  }
+  .topnav {
+    padding: 0px;
+    margin: 0px;
+    padding-top: 10px;
+  }
+  .topnav a {
+    padding-top: 10px;
+    padding: 5px;
+  }
+  .Sintro {
+    padding-top: 250px;
+    margin: 0px;
+    font-size: 40px;
+  }
 }
