--- a/style.css
+++ b/style.css
@@ -26,11 +26,39 @@ section {
   text-shadow: 2px 1px black;
 }
 .Sintro {
-  margin-top: 400px;
-  margin-left: 50px;
+  margin-top: 250px;
+  margin-left: 200px;
+  font-size: 30px;
+ }
+ .Sintro h1 {
   color: whitesmoke;
-  text-shadow: 4px 4px black;
-  font-size: 45px;
+  text-shadow: 2px 2px black;
+ }
+.subheading {
+  font-weight: 700;
+  color: #0779e4;
+  text-shadow: 1px 1px black;
+  font-size: 23px;
+  display: inline-block;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  background: #fff;
+  border-radius: 4px;
+  padding: 4px 9px;
+}
+.subheading:after {
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 0 5px;
+  border-color: #fff transparent transparent transparent;
 }
 @media only screen and (max-width: 700px) {
   * {
@@ -54,6 +82,6 @@ section {
   .Sintro {
     padding-top: 250px;
     margin: 0px;
-    font-size: 40px;
+    font-size: 30px;
   }
 }
