--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
   text-shadow: 2px 1px black;
 }
 .Sintro {
-  margin-top: 250px;
+  margin-top: 150px;
   margin-left: 200px;
   font-size: 30px;
  }
@@ -61,14 +61,14 @@ section {
   border-color: #fff transparent transparent transparent;
 }
 @media only screen and (max-width: 700px) {
-  * {
+  *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
   }
   section {
-    height: 100vh;
-    width:100%;
+    height: 96vh;
+    width:100vw;
   }
   .topnav {
     padding: 0px;
@@ -76,8 +76,9 @@ section {
     padding-top: 10px;
   }
   .topnav a {
+    margin:0px;
+    padding: 0px;
     padding-top: 10px;
-    padding: 5px;
   }
   .Sintro {
     padding-top: 250px;
