--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 section {
@@ -10,27 +11,12 @@ section {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.topnav {
-  text-align: justify;
-  /* padding: 12px 14px; */
-  padding-left: 800px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-
-}
-.topnav a {
-  padding-left: 70px;
-  text-decoration: none;
-  font-size: 25px;
-  color: whitesmoke;
-  text-shadow: 2px 1px black;
-}
 .Sintro {
-  margin-top: 150px;
-  margin-left: 200px;
+  padding-top: 150px;
+  padding-left: 200px;
   font-size: 30px;
  }
- .Sintro h1 {
+ .Sintro h1,h2 {
   color: whitesmoke;
   text-shadow: 2px 2px black;
  }
@@ -61,7 +47,7 @@ section {
   border-color: #fff transparent transparent transparent;
 }
 @media only screen and (max-width: 700px) {
-  *{
+  * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -70,19 +56,12 @@ section {
     height: 96vh;
     width:100vw;
   }
-  .topnav {
-    padding: 0px;
-    margin: 0px;
-    padding-top: 10px;
-  }
-  .topnav a {
-    margin:0px;
-    padding: 0px;
-    padding-top: 10px;
-  }
+
   .Sintro {
+    padding: 0px;
     padding-top: 250px;
     margin: 0px;
-    font-size: 30px;
+    font-size: 15px;
   }
+  
 }
