--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ section {
   color: whitesmoke;
   text-shadow: 2px 2px black;
  }
+ .Sintro h2 {
+  margin: 5px;
+  margin-left: 150px;
+ }
 .subheading {
   font-weight: 700;
   color: #0779e4;
@@ -56,12 +60,17 @@ section {
     height: 96vh;
     width:100vw;
   }
-
+  .subheading {
+    margin-left: 30px;
+  }
   .Sintro {
     padding: 0px;
     padding-top: 250px;
-    margin: 0px;
-    font-size: 15px;
-  }
+    font-size: 30px;
   
+  }
+  .Sintro h2 {
+    margin:0px;
+    text-shadow: 1px 2px red;
+  }
 }
