--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ section {
   border-width: 5px 5px 0 5px;
   border-color: #fff transparent transparent transparent;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 10   00px) {
   * {
     margin: 0px;
     padding: 0px;
@@ -66,7 +66,7 @@ section {
   .Sintro {
     padding: 0px;
     padding-top: 250px;
-    font-size: 30px;
+    font-size: 20px;
   
   }
   .Sintro h2 {
