--- a/style.css
+++ b/style.css
@@ -1,76 +1,81 @@
 * {
-  margin: 0px;
   padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
 }
-section {
-  background-image: url("king2.jpg");
-  height: 695px;
-  width: 100%;
-  background-position: center;
+body {
+  height: 2000px;
+ 
+}
+.mainimg {
+  background-image: url('KING.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  height: 100vh;
+  /* position: absolute; */
+  top: 0px;
+  left: 0px;
+  z-index: -1;
 }
-.Sintro {
-  padding-top: 150px;
-  padding-left: 200px;
-  font-size: 30px;
- }
- .Sintro h1,h2 {
-  color: whitesmoke;
-  text-shadow: 2px 2px black;
- }
- .Sintro h2 {
-  margin: 5px;
-  margin-left: 150px;
- }
-.subheading {
-  font-weight: 700;
-  color: #0779e4;
-  text-shadow: 1px 1px black;
-  font-size: 23px;
-  display: inline-block;
-  letter-spacing: 1px;
-  margin-bottom: 5px;
-  position: relative;
-  z-index: 0;
-  display: inline-block;
-  background: #fff;
-  border-radius: 4px;
-  padding: 4px 9px;
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 300px;
+    color: aqua;
+    position: fixed;
+    width: 100%;
+    transition: all 0.5s;
+    font-size: 25px;
+    text-shadow: 1px 1px purple;
 }
-.subheading:after {
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  content: '';
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 5px 5px 0 5px;
-  border-color: #fff transparent transparent transparent;
+.navbar-scroll {
+  background-color: whitesmoke;
+  box-shadow: 0px 3px 10px rgba(0,0,0,1);
 }
-@media only screen and (max-width: 10   00px) {
-  * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-  }
-  section {
-    height: 96vh;
-    width:100vw;
-  }
-  .subheading {
-    margin-left: 30px;
-  }
-  .Sintro {
-    padding: 0px;
-    padding-top: 250px;
-    font-size: 20px;
+.logo {
+
+}
+.links {
+  display: flex;
+  column-gap: 20px;
+
+}
+.link-items {
+
+}
+.link {
+
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.About {
+  height: 500px;
   
-  }
-  .Sintro h2 {
-    margin:0px;
-    text-shadow: 1px 2px red;
-  }
+}
+.aboutimg {
+  margin-left: 150px;
+  margin-top: 50px;
+  background-color:coral;
+  float: left;
+  border: 2px solid burlywood;
+
+}
+img{
+    margin: 10px;
+    height: 500px;
+    width: 400px;
+    border: 2px solid black;
+
+}
+.aboutme{
+  padding-top:100px;
+  font-size: 20px;
+  padding-left: 20px;
 }
