--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   height: 2000px;
  
 }
+
 .mainimg {
   background-image: url('KING.jpg');
   background-repeat: no-repeat;
@@ -22,13 +23,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px 300px;
-    color: aqua;
+    padding: 25px 150px;
+    color:black;
+    font-weight: bolder;
     position: fixed;
     width: 100%;
     transition: all 0.5s;
     font-size: 25px;
-    text-shadow: 1px 1px purple;
+    text-shadow: 1px 1px burlywood;
 }
 .navbar-scroll {
   background-color: whitesmoke;
@@ -39,7 +41,7 @@ body {
 }
 .links {
   display: flex;
-  column-gap: 20px;
+  column-gap: 50px;
 
 }
 .link-items {
@@ -54,6 +56,36 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+.intro {
+  padding-top: 250px;
+  padding-left: 250px;
+}
+.hh {
+  padding: 6px;
+  font-size: 20px;
+  margin-right: 1160px;
+  color: whitesmoke;
+  background-color: burlywood;
+  border-radius: 4px;
+  position: relative;
+  
+}
+.hh::after {
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 0 5px;
+  border-color:black transparent transparent transparent;
+}
+div h2 {
+  font-size: 40px;
+  color:burlywood;
+  text-shadow: 2px 2px black;
 }
 .About {
   height: 500px;
@@ -78,4 +110,23 @@ img{
   padding-top:100px;
   font-size: 20px;
   padding-left: 20px;
+}
+
+[data-typewriter]{
+  border-right: .35rem solid transparent;
+  padding: .6rem;
+  padding-top:0.1px;
+  padding-bottom: 0.1px;
+}
+[data-typewriter]:not(.typing){
+  /* animation: blink 1.1s step-end infinite; */
+}
+
+@keyframes blink {
+  0%,100% {
+    border-color: transparent;
+  }
+  50%{
+    border-color:purple;
+  }
 }
