--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .mainimg {
-  background-image: url('KING.jpg');
+  background-image: url('king.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -130,3 +130,11 @@ img{
     border-color:purple;
   }
 }
+@media only screen and (min-width: 600px) {
+
+  body {
+    height: 100vh;
+    width: 100vw;
+  }
+}
+
