--- a/style.css
+++ b/style.css
@@ -3,10 +3,7 @@
   margin: 0px;
   box-sizing: border-box;
 }
-body {
-  height: 2000px;
- 
-}
+
 
 .mainimg {
   background-image: url('king.jpg');
@@ -14,10 +11,10 @@ body {
   background-size: cover;
   width: 100%;
   height: 100vh;
-  /* position: absolute; */
+  position: absolute;
   top: 0px;
   left: 0px;
-  z-index: -1;
+  z-index: -1; 
 }
 .navbar {
     display: flex;
@@ -88,7 +85,7 @@ div h2 {
   text-shadow: 2px 2px black;
 }
 .About {
-  height: 500px;
+  margin-top: 400px;
   
 }
 .aboutimg {
@@ -130,11 +127,20 @@ img{
     border-color:purple;
   }
 }
-@media only screen and (min-width: 600px) {
-
-  body {
-    height: 100vh;
-    width: 100vw;
+@media only screen and (max-width: 600px) {
+  * {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    box-sizing: content-box;
   }
-}
+ .mainimg {
+  width: 100%;
+  height: 100vh;
+  background-size: auto;
 
+ }
+  
+
+  
+}
