--- a/index.css
+++ b/index.css
@@ -16,7 +16,14 @@
 }
 @media only screen and (max-width: 600px){
     .hero {
-        width: 100vw;
+        background-image: url('king5.jpg');
+        background-repeat: no-repeat;
         background-size: 100vw 100vh;
+        background-attachment: fixed;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: -1; 
+    
     }
 }
