--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    height: 2000px;
+}
 .main {
     width: 100%;
 }
@@ -14,16 +22,61 @@
     z-index: -1; 
 
 }
-@media only screen and (max-width: 600px){
+.navbar {
+    width: 100%;
+    height: 60px;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 150px;
+    color:black;
+    position: fixed;
+    transition: all 0.5s;
+    text-shadow: 1px 1px burlywood;
+}
+.navbar .logo a {
+    font-size: 25px;
+}
+.navbar-scroll {
+    background-color: whitesmoke;
+    box-shadow: 0px 3px 10px rgba(0,0,0,1);
+  }
+  .logo {
+  
+  }
+  .links {
+    display: flex;
+    column-gap: 50px;
+  }
+  .btn_toggle {
+    cursor: pointer;
+    display: none;
+  }
+  
+  ul {
+    list-style: none;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+@media only screen and (max-width: 800px){
     .hero {
         background-image: url('king5.jpg');
         background-repeat: no-repeat;
-        background-size: 100vw 100vh;
+        background-size: auto 100vh;
         background-attachment: fixed;
         position: absolute;
         top: 0px;
         left: 0px;
         z-index: -1; 
-    
+    }
+    .navbar{
+        padding: 20px 50px ;
+    }
+    .link{
+        display: none;
     }
 }
