--- a/index.css
+++ b/index.css
@@ -1,26 +1,41 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    height: 2000px;
-}
-.main {
-    width: 100%;
+body{
+    height: 100vh;
+    background-color: powderblue;
 }
 .hero {
     background-image: url('king.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
     width: 100%;
     height: 100vh;
     position: absolute;
     top: 0px;
     left: 0px;
     z-index: -1; 
-
+}
+li{
+    list-style:none;
+}
+a {
+    text-decoration: none;
+    color: whitesmoke;
+    text-shadow: 2px 2px purple;
+    font-size: 1rem;
+}
+a:hover{
+    color: burlywood;
+    text-shadow: 1px 1px black;
+}
+header{
+    position: relative;
+    padding: 0 2rem;
 }
 .navbar {
     width: 100%;
@@ -30,53 +45,52 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 150px;
-    color:black;
-    position: fixed;
-    transition: all 0.5s;
-    text-shadow: 1px 1px burlywood;
 }
 .navbar .logo a {
-    font-size: 25px;
+    font-size: 1.5em;;
+    font-weight: bold;
 }
-.navbar-scroll {
-    background-color: whitesmoke;
-    box-shadow: 0px 3px 10px rgba(0,0,0,1);
-  }
-  .logo {
-  
-  }
-  .links {
+.navbar .links {
     display: flex;
-    column-gap: 50px;
-  }
-  .btn_toggle {
+    gap: 2rem;
+}
+.navbar .toggle_btn {
+    color: black;
+    font-size: 1.5rem;
     cursor: pointer;
     display: none;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-@media only screen and (max-width: 800px){
-    .hero {
-        background-image: url('king5.jpg');
-        background-repeat: no-repeat;
-        background-size: auto 100vh;
-        background-attachment: fixed;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        z-index: -1; 
-    }
-    .navbar{
-        padding: 20px 50px ;
-    }
-    .link{
+}
+.dropdown_menu {
+    display: none;
+    position: absolute;
+    top: 60px;
+    right: 2rem;
+    width: 200px;
+    height: 0;
+    background-color: rgba(184, 129, 183, 0.688);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.dropdown_menu li {
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.dropdown_menu.open{
+    height: 140px;
+}
+@media (max-width:780px) {
+    .navbar .links{
         display: none;
+    }
+    .navbar .toggle_btn {
+        display: block;
+        color: black;
+    }
+    .dropdown_menu {
+        display: block;
     }
 }
