--- a/index.css
+++ b/index.css
@@ -92,14 +92,14 @@ section#hero{
     /* justify-content: center; */
     /* text-align:center; */
     color: powderblue;
-    text-shadow: 1px 1px purple;
+    text-shadow: 1.5px 1.5px black;
 }
 #hero h1{
-    font-size: 2rem;
+    font-size: 3rem;
     margin-bottom: 1rem;
 }
 #hero h2{
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
 }
 @media (max-width:780px) {
